# drones-mir-comunicador

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-31-headless-firma.md  2026-05-31-headless-signing.md
java/headless-signer/src/main/java/drones/mir/: HeadlessBatchSigner.java
samples/: flight.example.json
src/drones_mir_comunicador/: __init__.py  autofirma.py  autofirma_cli.py  cert_probe_cli.py  cli.py  client.py  communication_cli.py  flow.py  flow_cli.py  har.py  headless_signer.py  html_forms.py  login_probe_cli.py  p12.py  secrets.py
tests/: test_headless_signer.py
