[project]
name = "drones-mir-comunicador"
version = "0.1.0"
description = "Investigacion formativa del flujo de comunicaciones de vuelo UAS del MIR/SES."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
]

[project.scripts]
drones-har-summary = "drones_mir_comunicador.cli:main"
drones-har-flow = "drones_mir_comunicador.flow_cli:main"
drones-har-autofirma = "drones_mir_comunicador.autofirma_cli:main"
drones-cert-probe = "drones_mir_comunicador.cert_probe_cli:main"
drones-login-probe = "drones_mir_comunicador.login_probe_cli:main"
drones-communication = "drones_mir_comunicador.communication_cli:main"
drones-headless-signer = "drones_mir_comunicador.headless_signer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
